k8s-ci-cd/gocd-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "gocd"
  name: "gocd-server"
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: "gocd-secret"
      hosts:
        - "gocd.k3s"
  rules:
    - host: "gocd.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "gocd-server"
                port:
                  number: 8153
